src/QGraphicsItem.h


// 
// This file has been automatically generated by RaQt_maker V0.0.7.
// To modify and regenerate it, see the source code available here: 
//         https://github.com/yguillemot/RaQt_maker
// 

#include <stdint.h>
#include <QtWidgets>
#include "externc.h"

EXTERNC void QWQGraphicsItemsetParentItem(void * obj, int callerIdx, void * parent);
EXTERNC void QWQGraphicsItemhide(void * obj, int callerIdx);
EXTERNC void QWQGraphicsItemshow(void * obj, int callerIdx);
EXTERNC void QWQGraphicsItemsetEnabled(void * obj, int callerIdx, int8_t  enabled);
EXTERNC double QWQGraphicsItemx(void * obj, int callerIdx);
EXTERNC void QWQGraphicsItemsetX(void * obj, int callerIdx, double  x);
EXTERNC double QWQGraphicsItemy(void * obj, int callerIdx);
EXTERNC void QWQGraphicsItemsetY(void * obj, int callerIdx, double  y);
EXTERNC void QWQGraphicsItemsetPos_1(void * obj, int callerIdx, void * pos);
EXTERNC void QWQGraphicsItemsetPos_2(void * obj, int callerIdx, double  x, double  y);
EXTERNC void QWQGraphicsItemensureVisible_1(void * obj, int callerIdx, void * rect, int32_t  xmargin, int32_t  ymargin);
EXTERNC void QWQGraphicsItemensureVisible_2(void * obj, int callerIdx, double  x, double  y, double  w, double  h, int32_t  xmargin, int32_t  ymargin);
EXTERNC double QWQGraphicsItemzValue(void * obj, int callerIdx);
EXTERNC void QWQGraphicsItemsetZValue(void * obj, int callerIdx, double  z);
EXTERNC void * QWQGraphicsItemchildrenBoundingRect(void * obj, int callerIdx);
EXTERNC void * QWQGraphicsItemsceneBoundingRect(void * obj, int callerIdx);
EXTERNC int8_t QWQGraphicsItemcontains(void * obj, int callerIdx, void * point);